--- a/HTML/8-IMAGENES.HTML
+++ b/HTML/8-IMAGENES.HTML
@@ -6,8 +6,9 @@
   </head>
 
 <body>
-  <img src="https://th.bing.com/th/id/OIP.q5Ce61EAhGLmObIr7DwkeAHaEo?w=245&h=180&c=7&r=0&o=5&pid=1.7" alt="paisaje" width="4500px" height="15OOpx">
-<img src="https://ep01.epimg.net/elpais/imagenes/2019/10/30/album/1572424649_614672_1572453030_noticia_normal.jpg" alt="">
+  <img src="https://th.bing.com/th/id/OIP.q5Ce61EAhGLmObIr7DwkeAHaEo?w=245&h=180&c=7&r=0&o=5&pid=1.7" alt="paisaje" width="520px" height="340px"><br><br>
+<img src="https://ep01.epimg.net/elpais/imagenes/2019/10/30/album/1572424649_614672_1572453030_noticia_normal.jpg" alt="12" width="520px" height="340px" > <br><br>
+<img src="C:\sam\Gorbea-curso\HTML\Auroraborealdescarga.jpg" alt="00" width="520" height="340">
 </body>
 
 </html>
