--- a/HTML/2-TITULOS.HTML
+++ b/HTML/2-TITULOS.HTML
@@ -11,7 +11,7 @@
   <H3>TITULO TERCER NIVEL</H3>
   <H4>TITULO CUARTO NIVEL</H4>
   <H5>TITULO QUINTO NIVEL</H5>
-  <H6>TITULO SEXTO NIVEL</H6>
+  <H6><u>TITULO SEXTO NIVEL</u></H6>
   <P> ZZZZZZZZZZZZZZZZZZZZZZZZ
 
 
