--- a/CCS/PAGINA WEB/todoelcuerpoesunaestructuraflexb.html
+++ b/CCS/PAGINA WEB/todoelcuerpoesunaestructuraflexb.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <!-- https://creatuweb.espaciolatino.com/ejercicios/flex/ejercicio_10.html-->
-  <title>Ejercicio 19 flex ej. WEB nº10</title>
+  <title>todoelcuerpoesunaestructuraflexb</title>
   <link rel="stylesheet" href="todoelcuerpoesunaestructuraflexb.css">
 </head>
 
